# ncbi-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: search.rs
src/: biblio.rs  element.rs  eutils.rs  helpers.rs  lib.rs  medline.rs  parsing_utils.rs  pub.rs  seq.rs  seqalign.rs  seqblock.rs  seqfeat.rs  seqloc.rs  seqres.rs  seqset.rs  seqtable.rs
src/asn/: biblio.rs  entrezgene.rs  general.rs  medline.rs  mod.rs  pub.rs  scoremat.rs  seq.rs  seqalign.rs  seqblock.rs  seqcode.rs  seqfeat.rs  seqloc.rs  seqres.rs  seqset.rs  seqtable.rs
src/eutils/: efetch.rs  esearch.rs  esearchresult.rs  eutil.rs  mod.rs
src/parsing/: mod.rs  node.rs  unexpected.rs  utils.rs
tests/: bioseq.rs  entrezgene.rs  scoremat.rs
tests/data/: 2519734237.xml  deaminase_genome_search.xml  tp73.genbank.xml
