[package]
name = "ncbi"
authors = ["Josué D. Figueroa"]
description = "Rust data structures for NCBI APIs"
repository = "https://github.com/PoorRican/ncbi-rs/"
keywords = ["bioinformatics", "ncbi", "dna", "biology", "parser"]
categories = ["science", "data-structures", "database", "parser-implementations"]
license = "GPL-3.0-only"

version = "0.1.0-beta"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
